# Quicksetup-ai

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  conditional_prompt.json  cookiecutter.json  environment.yml  job_submission.sbatch  job_submission_interactive.sbatch  pyproject.toml  quicksetup_test.sh  setup.cfg  setup.py
.github/workflows/: test_created_project.yml
configs/: test.yaml
configs/datamodule/: mednist.yaml  mnist.yaml
configs/logger/: mlflow.yaml  tensorboard.yaml
configs/model/: densenet.yaml  mnist.yaml
docs/: conf.py  index.md  readme.md  requirements.txt
docs/source/: conf.py  index.rst  ml_pipeline_template.datamodules.components.rst  ml_pipeline_template.datamodules.rst  ml_pipeline_template.models.components.rst  ml_pipeline_template.models.rst  ml_pipeline_template.rst  ml_pipeline_template.utils.rst  modules.rst  src.datamodules.components.rst  src.datamodules.rst  src.models.components.rst  src.models.rst  src.rst  src.utils.rst
docs/source/notes/: config.md  easy_experiment.md  experiment_tracking.md  faq.md
docs/source/notes/getting_started/: installation.md  intro.md  project_structure.md  quickstart.md
docs/source/notes/how_to/: modify_data.md  modify_model.md  tune_hyperparams.md  use_dvc.md  use_monai.ipynb  use_monai.md  use_on_haicore.md  use_slurm.md
docs/source/notes/quicksetup_ai_101/: index.md  modify_data.md  modify_model.md
docs/source/notes/use_cases/: index.md  maskrcnn_detection_segmentation.md  monai_mednist_classification.md
hooks/: post_gen_project.py
logs/experiments/runs/default/2022-04-11_09-49-40/.hydra/: config.yaml
logs/experiments/runs/default/2022-04-11_09-49-40/checkpoints/: epoch_007.ckpt  last.ckpt
logs/experiments/runs/default/2022-04-11_10-03-44/checkpoints/: epoch_005.ckpt  last.ckpt
logs/experiments/runs/default/2022-04-11_10-08-29/.hydra/: hydra.yaml
logs/experiments/runs/default/2022-04-11_10-08-29/checkpoints/: epoch_007.ckpt  last.ckpt
logs/experiments/runs/default/2022-04-11_16-09-43/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/experiments/runs/simple_dense_net/2022-04-11_16-07-06/.hydra/: config.yaml  overrides.yaml
logs/experiments/runs/simple_dense_net/2022-04-11_16-18-56/checkpoints/: last.ckpt
logs/experiments/runs/simple_dense_net/2022-04-11_16-29-17/.hydra/: hydra.yaml
notebooks/: template.ipynb  template_demo.ipynb  template_presentation.ipynb
scripts/: job_submission.sbatch  job_submission_interactive.sbatch  test.py  test.sh  train.py  train.sh  train_model.py
src/ml_pipeline_template/: __init__.py  testing_pipeline.py  training_pipeline.py
src/ml_pipeline_template/datamodules/: classification.py
src/ml_pipeline_template/models/: classification.py  mnist_module.py
test/: test_cookiecutter.py
tests/: conftest.py
tests/unit/: test_mnist_datamodule.py
{{cookiecutter.project_name}}/: .gitignore  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/configs/: train.yaml
{{cookiecutter.project_name}}/configs/datamodule/: detection_and_segmentation.yaml  mednist.yaml  mnist.yaml
{{cookiecutter.project_name}}/configs/log_dir/: debug.yaml  default.yaml  evaluation.yaml  test_case.yaml
{{cookiecutter.project_name}}/configs/logger/: csv.yaml  wandb.yaml
{{cookiecutter.project_name}}/configs/model/: densenet.yaml  maskrcnn.yaml  mnist.yaml
{{cookiecutter.project_name}}/configs/trainer/: default.yaml
{{cookiecutter.project_name}}/docs/: readme.md  requirements.txt
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/docs/source/notes/getting_started/: installation.md  project_structure.md
{{cookiecutter.project_name}}/licenses/: Apache-2.0  BSD-3-Clause  GPL-3.0-only  MIT
{{cookiecutter.project_name}}/scripts/: job_submission.sbatch  job_submission_interactive.sbatch  test.py  train.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: testing_pipeline.py  training_pipeline.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/datamodules/: classification.py  detection_and_segmentation.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/models/: classification.py  detection_and_segmentation.py  mnist_module.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  dvc_utils.py
{{cookiecutter.project_name}}/tests/shell/: test_basic_commands.py  test_debug_configs.py  test_sweeps.py
{{cookiecutter.project_name}}/tests/unit/: test_mnist_datamodule.py
